k8s-apps/media/jellyseerr/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: argocd
