k8s-apps/media/jellyseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/managed-by: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyseerr.corp.mulliken.net
      secretName: jellyseerr-tls
  rules:
    - host: jellyseerr.corp.mulliken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
